--- a/src/components/table/styles.css
+++ b/src/components/table/styles.css
@@ -7,9 +7,9 @@
   /*--ag-foreground-color: rgb(126, 46, 132);
   --ag-background-color: rgb(249, 245, 227);*/
   --ag-header-foreground-color: rgb(255, 255, 255);
-  --ag-header-background-color: purple;
+  --ag-header-background-color: #818f9a;
   --ag-odd-row-background-color: rgb(0, 0, 0, 0.03);
-  --ag-header-column-resize-handle-color: rgb(126, 46, 132);
+  --ag-header-column-resize-handle-color: #fff;
 
   --ag-font-size: 16px;
   --ag-font-family: san-serif;
@@ -19,6 +19,6 @@
   border-radius: 1rem;
 }
 
-.ag-theme-alpine .ag-header-cell {
-  margin-left: 25px !important;
+.ag-theme-alpine .ag-header-cell-text {
+  margin-left: 4rem !important;
 }
