--- a/src/components/table/CustomCellRenderer.css
+++ b/src/components/table/CustomCellRenderer.css
@@ -21,11 +21,15 @@
 
 .role-field {
   display: flex;
-  width: 25%;
-  height: 25px;
+  width: 23%;
+  height: 23px;
   margin-top: 15px;
   border-radius: 10px;
   font-size: 12px;
+  margin-inline: auto;
+  letter-spacing: 0.5px;
+  font-weight: 600;
+  line-height: 23px;
 }
 
 .action-field {
@@ -33,6 +37,7 @@
   margin-top: 10px;
   font-size: 12px;
   color: "#818f9a";
+  margin-inline: 2rem;
 }
 
 .action-field .action-button {
